gcc/testsuite/rust/rustc/ui/consts/const_in_pattern/incomplete-slice_dg.rs
#[derive(PartialEq)]
enum E {
    A,
}

const E_SL: &[E] = &[E::A];

fn main() {
    match &[][..] {
// { dg-error ".E0004." "" { target *-*-* } .-1 }
        E_SL => {}
    }
}

